--- a/03/exercise/package.json
+++ b/03/exercise/package.json
@@ -10,9 +10,9 @@
   "author": "Md. Atiqul Islam",
   "license": "ISC",
   "dependencies": {
+    "gsap": "3.12",
     "three": "^0.179.1",
     "vite": "^7.1.3"
   },
-  "devDependencies": {},
   "description": ""
 }
